Removed unused code in standalone-container.sh