@@ -133,87 +133,8 @@ StartCommand() {
     # common setup
     export VESPA_SERVICE_NAME="$service"
 
-    if true; then
-        ${VESPA_HOME}/libexec/vespa/vespa-wrapper run-standalone-container "${jvm_arguments[@]}" &
-        echo $! > "$pidfile"
-        return
-    fi
-
-    # stuff for the process:
-    local appdir="${VESPA_HOME}/conf/$service-app"
-    local cfpfile="${VESPA_HOME}/var/jdisc_container/$service.properties"
-    local bundlecachedir="${VESPA_HOME}/var/vespa/bundlecache/$service"
-
-    cd "${VESPA_HOME}" || Fail "Cannot cd to ${VESPA_HOME}"
-
-    fixlimits
-
-    # If JAVA_HOME is set in the environment, the sourcing of common-env.sh
-    # elsewhere in this file ensures $JAVA_HOME/bin is first in PATH, so 'java'
-    # may be invoked w/o path.  In any case, checkjava verifies bare 'java'.
-    checkjava
-
-
-    local vespa_log="${VESPA_HOME}/logs/vespa/vespa.log"
-    export VESPA_LOG_TARGET="file:$vespa_log"
-    FixDataDirectory "$(dirname "$vespa_log")"
-
-    export VESPA_LOG_CONTROL_FILE="${VESPA_HOME}/var/db/vespa/logcontrol/$service.logcontrol"
-    export VESPA_LOG_CONTROL_DIR="$(dirname "$VESPA_LOG_CONTROL_FILE")"
-    FixDataDirectory "$VESPA_LOG_CONTROL_DIR"
-
-    # Does not need fast allocation
-    export MALLOC_ARENA_MAX=1
-
-    # will be picked up by standalone-container:
-    export standalone_jdisc_container__app_location="$appdir"
-
-    # class path
-    CP="${VESPA_HOME}/lib/jars/jdisc_core-jar-with-dependencies.jar"
-
-    FixDataDirectory "$(dirname "$cfpfile")"
-    printenv > "$cfpfile"
-    FixDataDirectory "$bundlecachedir"
-    FixDataDirectory "${VESPA_HOME}/var/crash"
-
-    heap_min=$(get_min_heap_mb "${jvm_arguments}" 128)
-    heap_max=$(get_max_heap_mb "${jvm_arguments}" 2048)
-    java \
-        -Xms${heap_min}m -Xmx${heap_max}m \
-        -XX:+PreserveFramePointer \
-        $(get_jvm_hugepage_settings $heap_max) \
-        -XX:+HeapDumpOnOutOfMemoryError \
-        -XX:HeapDumpPath="${VESPA_HOME}/var/crash" \
-        -XX:+ExitOnOutOfMemoryError \
-        --add-opens=java.base/java.io=ALL-UNNAMED \
-        --add-opens=java.base/java.lang=ALL-UNNAMED \
-        --add-opens=java.base/java.net=ALL-UNNAMED \
-        --add-opens=java.base/java.nio=ALL-UNNAMED \
-        --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
-        --add-opens=java.base/sun.security.ssl=ALL-UNNAMED  \
-        -Dconfig_model.ip_check=false \
-        -Djava.library.path="${VESPA_HOME}/lib64" \
-        -Djava.security.properties=${VESPA_HOME}/conf/vespa/java.security.override \
-        -Djava.awt.headless=true \
-        -Dsun.rmi.dgc.client.gcInterval=3600000 \
-        -Dsun.net.client.defaultConnectTimeout=5000 \
-        -Dsun.net.client.defaultReadTimeout=60000 \
-        -Djavax.net.ssl.keyStoreType=JKS \
-        -Djdk.tls.rejectClientInitiatedRenegotiation=true \
-        -Djdisc.config.file="$cfpfile" \
-        -Djdisc.export.packages= \
-        -Djdisc.cache.path="$bundlecachedir" \
-        -Djdisc.bundle.path="${VESPA_HOME}/lib/jars" \
-        -Djdisc.logger.enabled=false \
-        -Djdisc.logger.level=WARNING \
-        -Djdisc.logger.tag="$service" \
-        -Dfile.encoding=UTF-8 \
-        -cp "$CP" \
-        "${jvm_arguments[@]}" \
-        com.yahoo.jdisc.core.StandaloneMain standalone-container-jar-with-dependencies.jar &
-
-    local pid="$!"
-    echo "$pid" > "$pidfile"
+    ${VESPA_HOME}/libexec/vespa/vespa-wrapper run-standalone-container "${jvm_arguments[@]}" &
+    echo $! > "$pidfile"
 }
 
 Kill() {
